# RustyRail

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .taplo.toml  Cargo.toml  Dockerfile  README.md  deny.toml  dist-workspace.toml  docker-compose.yml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml  docker.yml  release.yml  rust.yml
.swm/: algorithm.yh3528c7.sw.md  swimm.json
app/: Cargo.toml  Dioxus.toml
app/assets/: main.css
app/src/: db.rs  main.rs  tests.rs  types.rs
benches/: benchmarks.rs
cli/: Cargo.toml
cli/src/: main.rs
harail/: Cargo.toml
harail/benches/: benchmarks.rs
harail/src/: errors.rs  graph.rs  gtfs.rs  lib.rs  main.rs
harail/src/gtfs/: opener.rs
harail/tests/: graph_tests.rs  gtfs_tests.rs  json_tests.rs  library_tests.rs  test_data.rs
lib/: Cargo.toml
lib/benches/: benchmarks.rs
lib/src/: graph.rs  gtfs.rs  lib.rs
lib/src/gtfs/: opener.rs
lib/tests/: graph_tests.rs  json_tests.rs  library_tests.rs  test_data.rs
server/: Cargo.toml
server/src/: db.rs  main.rs  tests.rs
src/: errors.rs  graph.rs  gtfs.rs  lib.rs  main.rs
src/gtfs/: opener.rs
tests/: graph_tests.rs  json_tests.rs  library_tests.rs  test_data.rs
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/harail/: package-lock.json  package.json
ui/harail/public/: index.html  manifest.json
ui/harail/src/: App.js  RouteFinder.js
ui/src/: App.jsx  RouteFinder.jsx  main.jsx  theme.jsx
