[package]
name = "harail"
version = "0.1.0"
authors = ["Yuval Deutscher"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
csv = "1.1.3"
priority-queue = "1.0.0"
clap = "2.33.1" 
json = "0.12.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.1"
thiserror = "1.0.20"
zip = "0.5.6"
