[package]
name = "harail_cli"
version = "0.1.0"
authors = ["Yuval Deutscher"]
license = "MPL-2.0"
description = "Public transport fastest-route finder for Israel Railways (CLI)"
repository = "https://github.com/hadeutscher/RustyRail"
readme = "../README.md"
keywords = ["transportation"]
categories = ["command-line-utilities"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
harail = { version = "0.1.0", path = "../lib/" }
chrono = "0.4"
clap = "2.33.1"
json = "0.12.4"
bincode = "1.3.1"
