[package]
name = "harail_cli"
version = "1.1.2"
authors = ["Yuval Deutscher"]
license = "MPL-2.0"
description = "Public transport fastest-route finder for Israel Railways (CLI)"
repository = "https://github.com/hadeutscher/RustyRail"
readme = "../README.md"
keywords = ["transportation"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
bincode = "1.3.3"
chrono = "0.4.19"
clap = "4.5.1"
harail = { path = "../lib/" }
jzon = "0.12.4"
