[package]
name = "harail_cli"
version = "1.2.0"
authors = ["Yuval Deutscher"]
license = "MPL-2.0"
description = "Public transport fastest-route finder for Israel Railways (CLI)"
repository = "https://github.com/hadeutscher/RustyRail"
readme = "../README.md"
keywords = ["transportation"]
categories = ["command-line-utilities"]
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
chrono = "0.4.40"
clap = "4.5.32"
harail = { path = "../lib/" }
jzon = "0.12.5"
