[package]
name = "harail"
version = "2.0.0"
authors = ["Yuval Deutscher"]
license = "MPL-2.0"
description = "Public transport fastest-route finder for Israel Railways"
repository = "https://github.com/hadeutscher/RustyRail"
readme = "../README.md"
keywords = ["transportation"]
exclude = ["fixtures/*"]
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
clap = "4.6.1"
csv = "1.4.0"
jzon = "0.12.5"
postcard = { version = "1", features = ["use-std"] }
priority-queue = "2.7.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
zip = "8.6.0"

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "benchmarks"
harness = false
