[package]
name = "harail"
version = "0.1.0"
authors = ["Yuval Deutscher"]
license = "MPL-2.0"
description = "Public transport fastest-route finder for Israel Railways"
repository = "https://github.com/hadeutscher/RustyRail"
readme = "../README.md"
keywords = ["transportation"]
exclude = ["fixtures/*"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
csv = "1.1.6"
jzon = "0.12.4"
priority-queue = "2.1.1"
serde = { version = "1.0.130", features = ["derive"] }
thiserror = "2.0.11"
zip = "2.2.2"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmarks"
harness = false
