[package]
name = "harail"
version = "1.2.2"
authors = ["Yuval Deutscher"]
license = "MPL-2.0"
description = "Public transport fastest-route finder for Israel Railways"
repository = "https://github.com/hadeutscher/RustyRail"
readme = "../README.md"
keywords = ["transportation"]
exclude = ["fixtures/*"]
edition = "2024"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
csv = "1.3.1"
jzon = "0.12.5"
priority-queue = "2.2.2"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
zip = "2.3.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmarks"
harness = false
