[package]
name = "harail_server"
version = "1.3.0"
authors = ["Yuval Deutscher"]
license = "MPL-2.0"
description = "Public transport fastest-route finder for Israel Railways (Server)"
repository = "https://github.com/hadeutscher/RustyRail"
readme = "../README.md"
keywords = ["transportation"]
categories = ["command-line-utilities"]
edition = "2024"
publish = false

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
chrono = "0.4.40"
clap = "4.5.37"
harail = { path = "../harail/" }
jzon = "0.12.5"
rocket = { version = "0.5.1", features = ["json"] }
