[package]
name = "harail_server"
version = "1.3.2"
authors = ["Yuval Deutscher"]
license = "MPL-2.0"
description = "Public transport fastest-route finder for Israel Railways (Server)"
repository = "https://github.com/hadeutscher/RustyRail"
readme = "../README.md"
keywords = ["transportation"]
categories = ["command-line-utilities"]
edition = "2024"
publish = false

[dependencies]
chrono = "0.4.44"
clap = "4.6.1"
dirs = "6"
futures-util = "0.3"
harail = { path = "../harail/" }
jzon = "0.12.5"
postcard = { version = "1", features = ["use-std"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "webpki-roots", "stream"] }
rocket = { version = "0.5.1", features = ["json"] }
tempfile = "3"
tokio = { version = "1", features = ["rt", "time"] }
